css/dropdown.css
[data-dropdown] {
  position: relative;
}

.dropdown-menu {
  position: absolute;
  background: #1f53ba;
  border: 2px solid #eff4fc;
  top: 48px;
  z-index: 200;
}

.dropdown-menu li a:hover {
  color: #eff4fc;
}

.dropdown-menu::before {
  content: '';
  display: block;
  position: absolute;
  top: -10px;
  width: 0;
  height: 0;
  border-bottom: 10px solid #eff4fc;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
}

[data-dropdown] .dropdown-menu {
  display: none;
}

[data-dropdown]:hover .dropdown-menu, [data-dropdown].active .dropdown-menu {
  display: block;
  animation: show-up .3s forwards;
}

@keyframes show-up {
  from {
    opacity: 0;
    transform: translate3d(0, -30px, 0);
  }

  to {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

